--- a/index.html
+++ b/index.html
@@ -356,23 +356,23 @@
                     <div class="channels-grid">
                         <div class="channel-item">
                             <div class="channel-number">122</div>
-                            <div class="channel-label">Phone Calls</div>
+                            <div class="channel-label">Phone Calls (51%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">37</div>
-                            <div class="channel-label">Missed Calls</div>
+                            <div class="channel-label">Missed Calls (15%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">31</div>
-                            <div class="channel-label">Text Messages</div>
+                            <div class="channel-label">Text Messages (13%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">26</div>
-                            <div class="channel-label">Email</div>
+                            <div class="channel-label">Email (11%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">24</div>
-                            <div class="channel-label">Webchat</div>
+                            <div class="channel-label">Webchat (10%)</div>
                         </div>
                     </div>
                 </div>
@@ -507,23 +507,23 @@
                     <div class="channels-grid">
                         <div class="channel-item">
                             <div class="channel-number">59</div>
-                            <div class="channel-label">Phone Calls</div>
+                            <div class="channel-label">Phone Calls (44%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">29</div>
-                            <div class="channel-label">Email</div>
+                            <div class="channel-label">Email (22%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">25</div>
-                            <div class="channel-label">Missed Calls</div>
+                            <div class="channel-label">Missed Calls (19%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">16</div>
-                            <div class="channel-label">Webchat</div>
+                            <div class="channel-label">Webchat (12%)</div>
                         </div>
                         <div class="channel-item">
                             <div class="channel-number">4</div>
-                            <div class="channel-label">Text Messages</div>
+                            <div class="channel-label">Text Messages (3%)</div>
                         </div>
                     </div>
                 </div>
